--- a/frontend/src/theme.css
+++ b/frontend/src/theme.css
@@ -2,6 +2,7 @@
 :root {
   --primary-text-color: #ffffff;
   --secondary-text-color: #252525;
+  --tertiary-text-color: #676767;
   --primary-background-color: #006909;
   --secondary-background-color: #fff;
   --success-color: #28a745;
