--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -23,6 +23,7 @@ header {
 .logo {
   margin-left: 10%;
   font-size: 60px;
+  margin-bottom: 0;
 }
 
 .content-grid-container {
@@ -58,7 +59,11 @@ button:hover {
   align-self: start;
   margin-left: 10%;
   font-size: 45px;
-  text-shadow: 1px 1px var(--tertiary-text-color);
+}
+
+.motto-background {
+  background-color: rgba(var(--secondary-background-color-rgb), 0.7);
+  border-radius: 10px;
 }
 
 .left-content {
