--- a/frontend/src/theme.css
+++ b/frontend/src/theme.css
@@ -5,8 +5,9 @@
   --tertiary-text-color: #676767;
   --primary-background-color: #fff;
   --secondary-background-color: #006909;
+  --secondary-background-color-rgb: 0, 105, 9;
   --success-color: #28a745;
-  --danger-color: #dc3545;
+  --error-color: #dc3545;
   --warning-color: #ffc107;
   --info-color: #17a2b8;
   --light-color: #f8f9fa;
