--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -73,3 +73,9 @@ button:hover {
   align-items: center;
 }
 
+.right-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
