--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -26,6 +26,10 @@ header {
   margin-bottom: 0;
 }
 
+.logo:hover {
+  color: var(--tertiary-text-color);
+}
+
 .content-grid-container {
   display: grid;
   grid-template-columns: 50% 50%;
