--- a/frontend/src/theme.css
+++ b/frontend/src/theme.css
@@ -2,7 +2,7 @@
 :root {
   --primary-text-color: #ffffff;
   --secondary-text-color: #252525;
-  --tertiary-text-color: #676767;
+  --tertiary-text-color: #c9c9c9;
   --primary-background-color: #fff;
   --secondary-background-color: #006909;
   --secondary-background-color-rgb: 0, 105, 9;
