added third background color

--- a/frontend/src/theme.css
+++ b/frontend/src/theme.css
@@ -5,6 +5,7 @@
   --tertiary-text-color: #c9c9c9;
   --primary-background-color: #fff;
   --secondary-background-color: #006909;
+  --tertiary-background-color: #b9b9b9;
   --secondary-background-color-rgb: 0, 105, 9;
   --success-color: #28a745;
   --error-color: #dc3545;
