--- a/frontend/src/components/HomePage/Sidebar/Sidebar.css
+++ b/frontend/src/components/HomePage/Sidebar/Sidebar.css
@@ -24,7 +24,9 @@
 
 .username {
   margin-top: 0;
-  color: var(--primary-text-color)
+  margin-bottom: 10px;
+  color: var(--primary-text-color);
+  font-family: var(--secondary-font);
 }
 
 .link-list {
@@ -38,4 +40,5 @@
   color: var(--primary-text-color);
   font-size: 30px;
   margin: 10px 0;
+  font-family: var(--primary-font);
 }
