--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -17,6 +17,7 @@
   color: var(--primary-text-color);
 }
 
+
 .menu-button {
   background-color: transparent;
   border: none;
@@ -56,36 +57,41 @@
   display: flex;
 }
 
-.home-content-left {
+.home-content-center {
+  display: flex;
+  justify-content: center
+}
+
+
+.home-sidebar {
   display: flex;
   flex-direction: column;
-  position: relative;
-  width: 20vw;
-  background-color: var(--primary-background-color);
+  position: absolute;
+  width: 0;
+  height: 90%;
+  background-color: transparent;
   overflow: hidden;
+  transition: 0.4s;
 }
 
-.home-content-left::before {
+.change .home-sidebar {
+  width: 20vw;
+  min-width: 300px;
+}
+
+.home-sidebar::before {
   content: '';
   position: absolute;
+  width: 20vw;
   right: 100%;
   width: 100%;
-  height: 100%;
+  height: 90%;
   background-color: var(--secondary-background-color);
   transition: right 0.5s;
+  z-index: 1;
 }
 
-.change .home-content-left::before {
+.change .home-sidebar::before {
   right: 0;
 }
 
-.home-content-center {
-  width: 60vw;
-  display: flex;
-  justify-content: center;
-}
-
-.home-content-right {
-  flex-shrink: 0;
-  margin-right: 0;
-}
