--- a/frontend/src/components/HomePage/Sidebar/Sidebar.css
+++ b/frontend/src/components/HomePage/Sidebar/Sidebar.css
@@ -1,10 +1,18 @@
 .sidebar {
+  position: absolute;
+  right: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
   z-index: 1;
   height: 100%;
+  transition: 0.4s;
+}
+
+.change .sidebar {
+  transition: 0.5s;
+  right: 0;
 }
 
 .profile-details {
