--- a/frontend/src/components/SignUpForm/SignUpForm.css
+++ b/frontend/src/components/SignUpForm/SignUpForm.css
@@ -9,29 +9,60 @@
   margin: 5px 10px;
 }
 
-.signup-h1 {
-  color: var(--secondary-text-color);
-  align-self: center;
-  margin: 0;
-}
-
 .signup-container {
   display: flex;
   flex-direction: column;
   background-color: var(--primary-background-color);
-  border-radius: 15px;
-  margin: 20px;
-  border: 1px solid var(--secondary-background-color);
+  border-radius: 1rem;
+  margin: 1rem;
+  margin-bottom: 10%;
+  border: 2px solid var(--secondary-background-color);
+}
+
+.signup-header-grid {
+  display: grid;
+  direction: rtl;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.signup-h1 {
+  font-family: var(--primary-font);
+  color: var(--secondary-text-color);
+  text-align: center;
+  margin: auto;
+}
+
+.signup-close-button {
+  background-color: var(--tertiary-background-color);
+  border: none;
+  border-top-right-radius: 0.91rem;
+}
+
+.signup-close-button:hover {
+  background-color: var(--error-color);
+}
+
+.signup-close-button-bar1,
+.signup-close-button-bar2 {
+  width: 2rem;
+  height: 0.5rem;
+  background-color: var(--primary-background-color);
+  background-color: var(--primary-text-color);
+  margin: 0.5rem 0.5rem;
+}
+
+.signup-close-button-bar1 {
+  transform: translate(0, 0.5rem) rotate(-45deg);
+}
+
+.signup-close-button-bar2 {
+  transform: translate(0, -0.5rem) rotate(45deg);
 }
 
 .signupform-flex-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
-
-.short-input {
-  width: 45%;
 }
 
 .input-error {
@@ -49,8 +80,18 @@
 }
 
 .create-button {
-  background-color: var(--secondary-background-color);
+  font-size: 2rem;
+  font-weight: bold;
+  font-family: var(--primary-font);
   color: var(--primary-text-color);
-  align-self: center;
-  height: auto;
+  width: 60%;
+  margin: 1rem;
+  height: 3.5rem;
+  border-radius: 1rem;
+  border: none;
+    background-color: var(--secondary-background-color);
+}
+
+.create-button:hover {
+  background-color: color-mix(in srgb, var(--secondary-background-color) 70%, transparent);
 }
