--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -3,9 +3,50 @@
   flex-direction: column;
   background-color: var(--primary-background-color);
   border-radius: 15px;
-  margin: 20px;
+  margin: 1rem;
+  margin-bottom: 20%;
   border: 1px solid var(--secondary-background-color);
   width: 60%;
+}
+
+.login-header-grid {
+  display: grid;
+  direction: rtl;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.login-close-button {
+
+  background-color: var(--tertiary-background-color);
+  border: none;
+  border-top-right-radius: 0.91rem;
+}
+
+.login-close-button:hover {
+  background-color: var(--error-color);
+}
+
+.login-close-button-bar1,
+.login-close-button-bar2 {
+  width: 2rem;
+  height: 0.5rem;
+  background-color: var(--primary-background-color);
+  background-color: var(--primary-text-color);
+  margin: 0.5rem 0.5rem;
+}
+
+.login-close-button-bar1 {
+  transform: translate(0, 0.5rem) rotate(-45deg);
+}
+
+.login-close-button-bar2 {
+  transform: translate(0, -0.5rem) rotate(45deg);
+}
+
+.login-h1 {
+  color: var(--secondary-text-color);
+  margin: auto;
+  font-family: var(--primary-font);
 }
 
 .loginform-flex-container {
@@ -13,13 +54,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.login-h1 {
-  color: var(--secondary-text-color);
-  align-self: center;
-  margin-bottom: 0;
-  font-family: var(--primary-font);
 }
 
 .login-input {
@@ -37,4 +71,21 @@
   color: var(--primary-text-color);
   width: 50%;
   font-family: var(--primary-font);
+}
+
+.login-button {
+  font-size: 2rem;
+  font-weight: bold;
+  font-family: var(--primary-font);
+  color: var(--primary-text-color);
+  width: 60%;
+  margin: 1rem;
+  height: 3rem;
+  border-radius: 1rem;
+  border: none;
+  background-color: var(--secondary-background-color);
+}
+
+.login-button:hover {
+  background-color: color-mix(in srgb, var(--secondary-background-color) 70%, transparent);
 }
