--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -3,7 +3,7 @@
 .landingpage-grid-container {
   display: grid;
   height: 100vh;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: 100vh auto;
 }
 
 .background {
@@ -20,21 +20,8 @@ header {
   display: flex;
 }
 
-.logo {
-  margin-left: 10%;
-  font-size: 70px;
-  margin-bottom: 0;
-  margin-top: 2%;
-  font-family: 'Brush Script MT', cursive;
-}
-
-.logo:hover {
-  color: var(--tertiary-text-color);
-}
-
-.content-grid-container {
-  display: grid;
-  grid-template-columns: 50% 50%;
+.content-flex-container {
+  display: flex;
 }
 
 .content {
@@ -42,12 +29,20 @@ header {
   background-size: cover;
 }
 
+.button-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20%;
+}
+
 .basic-button {
   font-size: 30px;
   font-weight: bold;
   font-family: var(--primary-font);
   color: var(--secondary-text-color);
-  opacity: 60%;
   width: 60%;
   margin: 10px;
   height: 60px;
@@ -57,28 +52,30 @@ header {
 }
 
 .basic-button:hover {
-  opacity: 100%;
   width: 65%;
 }
 
 .motto {
-  position: relative;
-  align-self: start;
+  text-align: start;
   margin-left: 10%;
-  font-size: 45px;
+  color: var(--secondary-text-color);
+  font-size: 2rem;
   font-family: var(--secondary-font);
-}
-
-.motto-background {
-  background-color: rgba(var(--secondary-background-color-rgb), 0.7);
-  border-radius: 10px;
 }
 
 .left-content {
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   flex-direction: column;
   align-items: center;
+  min-width: 345px;
+  width: 33vw;
+  height: 100%;
+}
+
+.left-content-background {
+  background-color: var(--primary-background-color);
+  
 }
 
 .right-content {
