--- a/frontend/src/components/AddRecipe/AddRecipeForm/AddRecipeForm.css
+++ b/frontend/src/components/AddRecipe/AddRecipeForm/AddRecipeForm.css
@@ -1,14 +1,22 @@
 .add-recipe-container {
   width: fit-content;
-  height: 75vh;
+  overflow-x: hidden;
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
 
 .add-recipe-flex {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  width: 80vw;
+  justify-content: start;
+}
+
+.add-recipe-form-h1 {
+  font-family: var(--primary-font);
+  margin: 0;
+  margin-bottom: 1rem;
 }
 
 .add-recipe-flex-row {
@@ -16,29 +24,70 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100%;
-  padding: 2rem;
+}
+
+.add-recipe-inputs-box {
+  display: flex;
+  justify-content: center;
+  min-width: 20rem;
+  width: 30%;
+  max-height: 61vh;
+  overflow: auto;
+  margin-right: 5%;
 }
 
 .add-recipe-inputs {
-  min-width: 20rem;
-  width: 35%;
+  width: 100%;
 }
 
 .input-box {
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  display: inline-block;
+  padding: 0;
+  margin: 0;
 }
 
 .add-recipe-input {
   font-size: 1rem;
   padding: 0.5rem;
-  width: 100%;
-  margin: 0.5rem;
+  width: 95%;
+  margin: 0.5rem 0;
   border-radius: 0.5rem;
   border: 1px solid var(--tertiary-text-color);
+}
+
+.add-recipe-input-extra {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.add-button {
+  font-size: 1rem;
+  font-family: var(--primary-font);
+  padding: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  border: 1px solid var(--tertiary-text-color);
+  background-color: var(--success-color);
+  color: var(--primary-text-color);
+}
+
+.add-button:hover {
+  background-color: color-mix(in srgb, var(--success-color) 100%, black 50%);
+}
+
+.add-recipe-ingredients {
+  margin: 0;
+  margin-bottom: 0.5rem;
+  font-family: var(--primary-font);
+}
+
+.add-recipe-steps {
+  margin: 0;
 }
 
  .input-placeholder {
@@ -64,19 +113,55 @@
   resize: none;
 }
 
+.add-recipe-form-button-box {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+}
+
+.add-recipe-button {
+  color: var(--primary-text-color);
+  width: 6rem;
+  height: 3rem;
+  margin: 0.5rem;
+  border-radius: 1rem;
+  border: none;
+}
+
+.cancel-button {
+  background-color: var(--error-color);
+}
+
+.save-button {
+  background-color: var(--success-color);
+}
+
+.cancel-button:hover {
+  background-color: color-mix(in srgb, var(--error-color) 100%, black 50%);
+}
+
+.save-button:hover {
+  background-color: color-mix(in srgb, var(--success-color) 100%, black 50%);
+}
+
 .image-box {
   display: flex;
   justify-content: center;
   align-items: center;
   border: 2px solid var(--tertiary-text-color);
-  width: 30%;
-  height: 100%;
+  max-height: 60vh;
+  height: 60vh;
+  min-width: 20rem;
+  aspect-ratio: 1 / 1;
   border-radius: 1rem;
   overflow: clip;
 }
 
 .add-recipe-pic {
   flex-shrink: 0;
+  max-width: 120%;
+  max-width: 120%;
   min-width: 100%;
   min-height: 100%
 }
