--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -6,6 +6,7 @@ footer {
   justify-content: space-around;
   align-items: center;
   color: var(--primary-text-color);
+  max-height: 4.5rem;
 }
 
 a {
