--- a/frontend/src/components/Logo/Logo.css
+++ b/frontend/src/components/Logo/Logo.css
@@ -1,8 +1,8 @@
 .logo {
-  margin-left: 10%;
-  font-size: 70px;
+  font-size: 4rem;
+  text-align: center;
   margin-bottom: 0;
-  margin-top: 2%;
+  margin-top: 0;
   color: var(--secondary-background-color);
   font-family: 'Brush Script MT', cursive;
 }
