--- a/frontend/src/components/HomePage/Sidebar/Sidebar.css
+++ b/frontend/src/components/HomePage/Sidebar/Sidebar.css
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: space-evenly;
   z-index: 1;
-  height: 100%;
+  height: 89%;
   transition: 0.5s;
 }
 
@@ -50,4 +50,18 @@
   font-size: 2rem;
   margin: 0.5rem 0;
   font-family: var(--primary-font);
+}
+
+.logout-button {
+  padding: 1rem;
+  margin: 0;
+  background-color: var(--error-color);
+  color: var(--primary-text-color);
+  border: 2px solid var(--primary-background-color);
+  border-radius: 1rem;
+  width: 50%;
+}
+
+.logout-button:hover {
+  background-color: color-mix(in srgb, var(--error-color) 100%, black 50%);
 }
