changed checkbox color on recipe page

--- a/frontend/src/components/RecipePage/StepList/Step/Step.css
+++ b/frontend/src/components/RecipePage/StepList/Step/Step.css
@@ -6,3 +6,7 @@
   text-decoration: line-through;
   color: var(--success-color);
 }
+
+.step-checkbox {
+  accent-color: var(--secondary-background-color);
+}
