--- a/frontend/src/components/HomePage/Sidebar/Sidebar.css
+++ b/frontend/src/components/HomePage/Sidebar/Sidebar.css
@@ -46,8 +46,9 @@
 }
 
 .sidebar-links {
+  text-align: center;
   color: var(--primary-text-color);
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin: 0.5rem 0;
   font-family: var(--primary-font);
 }
