--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -12,6 +12,33 @@
   justify-content: space-between;
 }
 
+.homepage-search-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  right: 0.5rem;
+  top: 0.5rem;
+  width: 30vw;
+  min-width: 14rem;
+}
+
+.searchbar {
+  border-radius: 1rem;
+  font-size: 1.2rem;
+  width: 25%;
+  min-width: 13rem;
+}
+
+.homepage-search-results {
+  height: fit-content;
+  max-height: 40vh;
+  background-color: var(--primary-background-color);
+  border: 0.1rem solid var(--secondary-background-color);
+  align-self: stretch;
+  z-index: 2;
+}
+
 .home-h1 {
   font-family: var(--primary-font);
   color: var(--primary-text-color);
@@ -44,13 +71,6 @@
 
 .change .bar3 {
   transform: translate(0, -11px) rotate(45deg);
-}
-
-.searchbar {
-  border-radius: 10px;
-  font-size: 20px;
-  margin-right: 20px;
-  width: 25%;
 }
 
 .home-content {
