--- a/frontend/src/components/HomePage/UserResult/UserResult.css
+++ b/frontend/src/components/HomePage/UserResult/UserResult.css
@@ -14,15 +14,18 @@
 
 .user-result-username {
   margin: 0.5rem;
+  font-family: var(--secondary-font);
 }
 
 .user-result-name {
-  margin: 0.5rem
+  margin: 0.5rem;
+  font-family: var(--primary-font);
 }
 
 .user-result-send-request {
   background-color: var(--secondary-background-color);
   color: var(--primary-text-color);
+  font-family: var(--primary-font);
   border-radius: 1rem;
   width: 80%;
   height: 50%;
