--- a/frontend/src/components/HomePage/UserResult/UserResult.css
+++ b/frontend/src/components/HomePage/UserResult/UserResult.css
@@ -22,6 +22,11 @@
   font-family: var(--primary-font);
 }
 
+.user-result-request-sent {
+  margin: auto;
+  font-family: var(--primary-font);
+}
+
 .user-result-send-request {
   background-color: var(--secondary-background-color);
   color: var(--primary-text-color);
