--- a/frontend/src/components/HomePage/FriendsPage/FriendsPage.css
+++ b/frontend/src/components/HomePage/FriendsPage/FriendsPage.css
@@ -26,7 +26,8 @@
 
 .friends-page-friend-requests-divider {
   display: grid;
-  grid-template-columns: 40% 20% 40%;
+  width: 100%;
+  grid-template-columns: 50% 50%;
 }
 
 .friends-page-friends-request-list {
