--- a/frontend/src/components/SettingsPage/SettingsPage.css
+++ b/frontend/src/components/SettingsPage/SettingsPage.css
@@ -7,6 +7,27 @@
   margin: 0;
 }
 
+.settings-page-back-button {
+  font-size: 2rem;
+  font-family: var(--primary-font);
+  position: absolute;
+  left: 2rem;
+  top: 1rem;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+}
+
+.settings-page-back-button:hover {
+  background-color: color-mix(in srgb, var(--primary-background-color) 100%, black 50%);
+  color: var(--primary-text-color);
+}
+
+@media(max-width: 500px) {
+  .settings-page-back-button{
+    left: 1rem;
+  }
+}
+
 .settings-page-form {
   display: flex;
   flex-direction: column;
@@ -32,7 +53,7 @@
   margin: 0.5rem;
 }
 
-.settings-page-h5, .settings-page-h3 {
+.settings-page-h5, .settings-page-h3, .settings-page-h1 {
   margin: 0;
 }
 
@@ -54,6 +75,16 @@
   flex-direction: column;
   align-items: center;
   width: 50%;
+}
+
+@media(max-width: 500px) {
+  .settings-page-password-box {
+      width: 80%;
+    }
+  .settings-page-current-and-input {
+    width: 80%;
+    margin: 0.5rem;
+  }
 }
 
 .settings-page-password-input {
