password change to frontend added

--- a/frontend/src/components/SettingsPage/SettingsPage.css
+++ b/frontend/src/components/SettingsPage/SettingsPage.css
@@ -54,9 +54,10 @@
 }
 
 .settings-page-error-text{
-  margin: 0 10px;
+  width: 100%;
+  margin: 0;
   text-align: center;
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: var(--error-color);
 }
 
