--- a/frontend/src/components/AddRecipe/AddRecipeForm/AddRecipeForm.css
+++ b/frontend/src/components/AddRecipe/AddRecipeForm/AddRecipeForm.css
@@ -31,9 +31,10 @@
 .add-recipe-inputs-box {
   display: flex;
   justify-content: center;
+  align-items: start;
   min-width: 20rem;
   width: 30%;
-  max-height: 61vh;
+  max-height: 68vh;
   overflow: auto;
   margin-right: 5%;
 }
@@ -51,6 +52,7 @@
   margin: 0;
 }
 
+
 .add-recipe-input {
   font-size: 1rem;
   padding: 0.5rem;
@@ -59,6 +61,11 @@
   margin-right: 0.5rem;
   border-radius: 0.5rem;
   border: 1px solid var(--tertiary-text-color);
+}
+
+.input-category-selection {
+  border: none;
+  outline: none;
 }
 
 .add-recipe-input-extra {
@@ -154,14 +161,22 @@
   background-color: color-mix(in srgb, var(--success-color) 100%, black 50%);
 }
 
+.image-flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .image-box {
   display: flex;
   justify-content: center;
   align-items: center;
   border: 2px solid var(--tertiary-text-color);
-  max-height: 60vh;
-  height: 60vh;
+  max-height: 50vh;
+  height: 50vh;
   margin: 1rem;
+  margin-bottom: 0;
   min-width: 20rem;
   aspect-ratio: 1 / 1;
   border-radius: 1rem;
