changed place of header in recipes list

--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -62,6 +62,10 @@
   transition: 0.4s;
 }
 
+.invisible {
+  background-color: transparent;
+}
+
 .change .bar1 {
   transform: translate(0, 11px) rotate(-45deg);
 }
