--- a/frontend/src/components/HomePage/Sidebar/Sidebar.css
+++ b/frontend/src/components/HomePage/Sidebar/Sidebar.css
@@ -30,10 +30,13 @@
   height: 10rem;
   width: 10rem;
   color: var(--primary-text-color);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  margin-bottom: 0;
 }
 
 .username {
-  margin-bottom: 0.5rem;
+  margin: 0;
   color: var(--primary-text-color);
   font-family: var(--secondary-font);
 }
