--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -43,9 +43,11 @@ header {
   font-weight: bold;
   font-family: var(--primary-font);
   color: var(--secondary-text-color);
-  width: 60%;
+  width: fit-content;
+  min-width: 60%;
   margin: 10px;
-  height: 60px;
+  height: fit-content;
+  min-height: 60px;
   border-radius: 15px;
   border: 3px solid var(--secondary-background-color);
   background-color: var(--primary-background-color);
