--- a/frontend/src/components/AddRecipe/AddRecipeForm/AddRecipeForm.css
+++ b/frontend/src/components/AddRecipe/AddRecipeForm/AddRecipeForm.css
@@ -72,6 +72,7 @@
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   margin-right: 0;
+  width: 75%
 }
 
 .add-recipe-input-extra:focus~.add-button {
@@ -79,6 +80,7 @@
 }
 
 .add-button {
+  width: 25%;
   font-size: 1rem;
   font-family: var(--primary-font);
   margin-right: 0.5rem;
