--- a/frontend/src/components/HomePage/RecipeList/RecipeList.css
+++ b/frontend/src/components/HomePage/RecipeList/RecipeList.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .recipe-list-category-filter-box {
@@ -23,6 +25,8 @@
   overflow: scroll;
   flex-wrap: wrap;
   margin: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .recipe-list::-webkit-scrollbar {
