added error message being printed on the screen when login fails

--- a/frontend/src/components/LandingPage/LoginForm/LoginForm.css
+++ b/frontend/src/components/LandingPage/LoginForm/LoginForm.css
@@ -73,6 +73,13 @@
   font-family: var(--primary-font);
 }
 
+.login-error-message {
+  text-align: center;
+  color: var(--error-color);
+  margin: 0;
+  width: 90%;
+}
+
 .login-button {
   font-size: 1rem;
   font-weight: bold;
