--- a/frontend/src/components/HomePage/RecipeList/RecipeList.css
+++ b/frontend/src/components/HomePage/RecipeList/RecipeList.css
@@ -19,14 +19,29 @@
 }
 
 .recipe-list {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 1rem;
   overflow: scroll;
-  flex-wrap: wrap;
-  margin: 10px;
-  width: 100%;
-  height: 100%;
+  margin: 0.5rem;
+}
+
+@media (min-width: 690px) {
+  .recipe-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 960px) {
+  .recipe-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1280px) {
+  .recipe-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .recipe-list::-webkit-scrollbar {
