--- a/frontend/src/components/HomePage/RecipeList/RecipeList.css
+++ b/frontend/src/components/HomePage/RecipeList/RecipeList.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-  align-items: center;
+  align-items: start;
   width: 100%;
   height: 100%;
 }
@@ -12,6 +12,9 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .recipe-list-category-filter {
